// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > should render modal and emit ok/cancel event 1`] = `
<!--teleport start-->
<div class="sd-modal-container" style="z-index: 1001;">
  <transition-stub name="fade-modal" appear="true" persisted="false" css="true">
    <div class="sd-modal-mask"></div>
  </transition-stub>
  <div class="sd-modal-wrapper sd-modal-wrapper-align-center">
    <transition-stub name="zoom-modal" appear="true" persisted="true" css="true">
      <div class="sd-modal">
        <div class="sd-modal-header sd-modal-header-with-close">
          <div class="sd-modal-title sd-modal-title-align-center sd-modal-title-with-close">
            <!--v-if--><span class="sd-modal-title-text sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">Title</span></span>
            <!--teleport start-->
            <!--teleport end-->
          </div>
          <div tabindex="-1" role="button" aria-label="Close" class="sd-modal-close-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></div>
        </div>
        <div class="sd-modal-body">
          <div>Modal Body</div>
        </div>
        <div class="sd-modal-footer"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
            <!--v-if-->取消
          </button><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
            <!--v-if-->确定
          </button></div>
      </div>
    </transition-stub>
  </div>
</div>
<!--teleport end-->
`;

exports[`Modal > should render simple modal 1`] = `
<!--teleport start-->
<div class="sd-modal-container" style="z-index: 1001;">
  <transition-stub name="fade-modal" appear="true" persisted="false" css="true">
    <div class="sd-modal-mask"></div>
  </transition-stub>
  <div class="sd-modal-wrapper sd-modal-wrapper-align-center">
    <transition-stub name="zoom-modal" appear="true" persisted="true" css="true">
      <div class="sd-modal sd-modal-simple">
        <div class="sd-modal-header">
          <div class="sd-modal-title sd-modal-title-align-center">
            <!--v-if--><span class="sd-modal-title-text sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">Title</span></span>
            <!--teleport start-->
            <!--teleport end-->
          </div>
          <!--v-if-->
        </div>
        <div class="sd-modal-body">
          <div>Modal Body</div>
        </div>
        <div class="sd-modal-footer"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
            <!--v-if-->取消
          </button><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
            <!--v-if-->确定
          </button></div>
      </div>
    </transition-stub>
  </div>
</div>
<!--teleport end-->
`;

exports[`Modal > should show modal and call cb 1`] = `
<body style="overflow: hidden; box-sizing: border-box;">
  <div class="sd-overlay sd-overlay-modal"><!--teleport start-->
    <div class="sd-modal-container" style="z-index: 1001;"><transition-stub name="fade-modal" appear="true" persisted="false" css="true">
        <div class="sd-modal-mask"></div>
      </transition-stub>
      <div class="sd-modal-wrapper sd-modal-wrapper-align-center"><transition-stub name="zoom-modal" appear="true" persisted="true" css="true">
          <div class="sd-modal">
            <div class="sd-modal-header sd-modal-header-with-close">
              <div class="sd-modal-title sd-modal-title-align-center sd-modal-title-with-close"><!--v-if--><span class="sd-modal-title-text sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">title</span></span><!--teleport start--><!--teleport end--></div>
              <div tabindex="-1" role="button" aria-label="Close" class="sd-modal-close-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></div>
            </div>
            <div class="sd-modal-body">content</div>
            <div class="sd-modal-footer"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button"><!--v-if-->取消</button><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button"><!--v-if-->确定</button></div>
          </div>
        </transition-stub></div>
    </div><!--teleport end-->
  </div><!---->
</body>
`;
